2004-07-09 Scott Dattalo <scott@dattalo.com>
	* cli/socket.cc: Added a very thin object layer to the socket interface
	* examples/scripts/testsocket.py: added to the repository. This is
	a simple python script that will exercise all of the commands that
	gpsim will accept through a socket interface.

2004-07-08 Scott Dattalo <scott@dattalo.com>
	* gui/gui_main.cc, cli/socket.cc, cli/input.cc, configure.in: Added
	support for multithreading.
	* TODO: cleaned up the TODO list a little by removing some outdated
	items.

2004-07-08  Manuel Bouyer <bouyer@antioche.eu.org>
	* src/16bit-registers.cc, src/16bit-registers.h: Added put() and
	update_pin_directions() methods for the PORTC16 class

2004-07-07 Scott Dattalo <scott@dattalo.com>
	* cli/socket.cc: New file
	* cli/input.cc: init_gpsim() will now create a socket.
	Added a Socket class that is capable of creating a socket and
	accepting commands.
	* src/registers.h: added an option to fetch the RegisterValue object
	without causing a trace to be emitted.

2004-07-06 Borut Razem <borut.razem@siol.net>
	* gui/settings.h, gui/settings_exdbm.h, gui/settings_exdbm.cc,
	  gui/gui.h, plat/win32/settings_reg.h, plat/win32/settings_reg.cpp,
	  gui/gui.vcproj, gui/Makefile.am: added additional layer to hide
	  differences between eXdbm and WIN32 registry
	* store settings in registy on WIN32

2004-07-03 Borut Razem <borut.razem@siol.net>
	* plat/win32/gpsim.ico, plat/win32/gpsim.nsi: created NSIS setup script

2004-07-02 Scott Dattalo <scott@dattalo.com>
	* gpsim/input.cc, gui/gui_menu.cc: Now files are correctly
	loaded through the menu interface (File/Open)
	* cli/parse.yy, cli/scan.ll, cli/operator.cc, cli/operator.h:
	Added new binary operators: -,*,/,&,^,<<,>>
	
2004-07-02 Scott Dattalo <scott@dattalo.com>
	* gpsim/main.cc: Emit warning if a user specifies both
	a .hex file and a .cod file at the command line.

2004-06-30 Scott Dattalo <scott@dattalo.com>
	* plat/win32/gpsim.def: Added additional export definitions.