@@ -6,6 +6,13 @@ s.connect(("", 0x1234))
 s.send("help\n")
 print s.recv(20)
 
+# helper functions
+def ParseInt(buf):
+    if buf[0:3] == "$03" :
+        return int(buf[3:11])
+
+    return 0
+
 # Object container
 s.send("$0105")
 print s.recv(20)
@@ -20,7 +27,16 @@ print s.recv(20)
 
 
 # Command object
-s.send("$0401")
+s.send("$"+"80")
+print s.recv(20)
+
+# Symbol Command 
+s.send("$"+"97"+"0205misc1")
+r = s.recv(20)
+print "received:" + r + " decoded as " + str(ParseInt(r))
+
+# Integer object
+s.send("$0300000001")
 print s.recv(20)
 
 s.close()
