@@ -1,3 +1,7 @@
+2004-07-12 Scott Dattalo <scott@dattalo.com>
+	* cli/socket.cc: dinking around...
+	* examples/scripts/testsocket.py:
+	
 2004-07-09 Scott Dattalo <scott@dattalo.com>
 	* cli/socket.cc: Added a very thin object layer to the socket interface
 	* examples/scripts/testsocket.py: added to the repository. This is
